--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4                                                                                                Nah I don't think he goes to usf, he lives around here though  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7863\n",
-      "Running on public URL: https://b14eef1c02e9faf1c2.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on public URL: https://d61d83ac736f987393.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -215,7 +215,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://b14eef1c02e9faf1c2.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://d61d83ac736f987393.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -228,7 +228,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,8 +244,8 @@
     "\n",
     "# Povide labels for each textbox.\n",
     "my_app = gr.Interface(fn=sms_prediction, \n",
-    "                       inputs=gr.Textbox(lines=5, label=\"Enter SMS text message\"), \n",
-    "                       outputs=gr.Textbox(label=\"Prediction determination\"),  \n",
+    "                       inputs=gr.Textbox(lines=3, label=\"Enter SMS text message\"), \n",
+    "                       outputs=gr.Textbox(lines=3, label=\"Prediction determination\"),  \n",
     "                       title=\"SMS Spam Detector\",\n",
     "                       description=\"Enter a text message to determine if it's spam or not.\")  \n",
     " \n",
