Draft for submission: 4May2024

--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -259,13 +259,13 @@
    "source": [
     "## Test the following text messages. \n",
     "---\n",
-    "1. You are a lucky winner of $5000! Not spam\n",
+    "1. You are a lucky winner of $5000! \n",
     "\n",
-    "2. You won 2 free tickets to the Super Bowl. Not spam\n",
+    "2. You won 2 free tickets to the Super Bowl. \n",
     "\n",
-    "3. You won 2 free tickets to the Super Bowl text us to claim your prize. Spam\n",
+    "3. You won 2 free tickets to the Super Bowl text us to claim your prize. \n",
     "\n",
-    "4. Thanks for registering. Text 4343 to receive free updates on medicare. Spam"
+    "4. Thanks for registering. Text 4343 to receive free updates on medicare. "
    ]
   }
  ],
